--- a/notebooks/get_weather_data.ipynb
+++ b/notebooks/get_weather_data.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import tensorflow as tf"
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "import datetime as dt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +130,7 @@
        "4                     -3  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,60 +141,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'contains'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-120-712d6ec24bfe>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# tmp = df[df['wind_speed'].str.contains('-')]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'wind_speed'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontains\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'-'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m         \u001b[0mkek\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"wind_speed\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'-'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wind_speed'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkek\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkek\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'contains'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# df.loc[df['wind_speed']=='8']\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "df.loc[df['wind_speed'].isnull(), 'wind_speed'] = '0'\n",
+    "pd.set_option('display.max_rows', None) #can be deleted\n",
+    "\n",
+    "# wind_direction cast and transform of data\n",
     "df.loc[df['wind_direction'] == 'тихо', 'wind_direction'] = '0'\n",
     "df.loc[df['wind_direction'] == 'нст', 'wind_direction'] = '-1'\n",
-    "# tmp = df[df['wind_speed'].str.contains('-')]\n",
-    "for index, row in df.iterrows() :\n",
-    "    if df.loc['wind_speed'].contains('-') :\n",
-    "        kek = row[\"wind_speed\"].split('-')\n",
-    "        df.loc[index, 'wind_speed'] = (int((int(kek[0]) + int(kek[1]))/2))\n",
+    "df[\"wind_direction\"] = df['wind_direction'].astype(str).astype(int)\n",
     "\n",
-    "df[df['wind_speed'].str.contains('-')]\n",
-    "#         kek = tmp[i, \"wind_speed\"].split('-')\n",
-    "#         print((int(tmp.loc[i, \"wind_speed\"].split('-')[0]) + int(tmp.loc[i, \"wind_speed\"].split('-')[1]))/2)\n",
-    "#         tmp.loc['wind_speed'] = res;\n",
-    "# df.loc['-' in df['wind_speed'], 'wind_speed'] = (int(df['wind_speed'].split('-')[0]) + int(df['wind_speed'].split('-')[1]))/2"
+    "# wind_speed cast and transform of non-integer data to its mean value\n",
+    "df.loc[df['wind_speed'].isnull(), 'wind_speed'] = '0'\n",
+    "new = df['wind_speed'].str.split('-', expand = True) \n",
+    "\n",
+    "df[\"wind_speed1\"]= new[0] \n",
+    "df.loc[df['wind_speed'].str.contains('-') == 0, \"wind_speed2\"]= new[0] \n",
+    "df.loc[df['wind_speed'].str.contains('-'), \"wind_speed2\"]= new[1]\n",
+    "\n",
+    "df[\"wind_speed1\"] = df['wind_speed1'].astype(str).astype(int)\n",
+    "df[\"wind_speed2\"] = df['wind_speed2'].astype(str).astype(int)\n",
+    "\n",
+    "col = df.loc[: , \"wind_speed1\":\"wind_speed2\"]\n",
+    "df['wind_speed'] = col.mean(axis=1)\n",
+    "df = df.drop(['wind_speed1', 'wind_speed2'], axis=1)\n",
+    "\n",
+    "# time cast and transform of data\n",
+    "df['date'] = df['date'].astype(str)\n",
+    "new = df['date'].str.split('.', expand = True)\n",
+    "df['date'] = new[0] +'/'+ new[1] +'/'+ '20' + new[2]\n",
+    "\n",
+    "df['time'] = df['time'].astype(str)\n",
+    "df['t1'], df['t2'], df['t3'], df['t4'] = df['time'].str[0], df['time'].str[1], df['time'].str[2], df['time'].str[3]\n",
+    "df['datetime'] = np.where(df['t4'].isnull(), df['date'] + ' ' + df['t1'] + ':' + df['t2'] + df['t3'], df['date'] + ' ' + df['t1'] + df['t2'] +':'+ df['t3'] + df['t4'])\n",
+    "df.loc[df['t2'].isnull(),'datetime'] = df['date'] + ' 00:00';\n",
+    "\n",
+    "df['datetime'] = pd.to_datetime(df['datetime'], format=\"%d/%m/%Y %H:%M\")\n",
+    "\n",
+    "df = df.drop(['time', 'date', 't1', 't2', 't3', 't4'], axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "wind_direction                    int32\n",
+       "wind_speed                      float64\n",
+       "temperature                       int64\n",
+       "effective_temperature             int64\n",
+       "datetime                 datetime64[ns]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
   },
   {
    "cell_type": "code",
