path to weather data was changed in jupyter notebook

--- a/notebooks/get_weather_data.ipynb
+++ b/notebooks/get_weather_data.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('C:\\\\Users\\\\Анна\\\\OneDrive\\\\Project2020\\\\data\\\\weather_data2.csv', sep=';')"
+    "df = pd.read_csv('C:\\\\Users\\\\Анна\\\\OneDrive\\\\Project2020\\\\data\\\\weather_data.csv', sep=';')"
    ]
   },
   {
@@ -206,13 +206,6 @@
    "source": [
     "df.dtypes"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
